<resources>
    <string name="app_name">Kkiri</string>
    <string name="navigation_home">홈</string>
    <string name="navigation_chatting">채팅</string>
    <string name="navigation_my_page">마이페이지</string>
    <string name="menu_search">검색</string>
    <string name="text_my_beans">보유 콩</string>
    <string name="text_my_beans_number">%d개</string>
    <string name="text_help_me">도와주세요!</string>
    <string name="description_beans_image">콩 이미지</string>
    <string name="text_more_eng">more</string>
    <string name="description_more">더보기 버튼</string>
    <string name="description_logo_image">로고 이미지</string>
    <string name="description_post_image">게시글 이미지</string>
    <string name="description_chatting_number_icon">채팅 수 아이콘</string>
    <string name="label_write_complete">작성 완료</string>
    <string name="text_picture">사진</string>
    <string name="common_text_title">제목</string>
    <string name="text_need_beans">사용할 콩 개수</string>
    <string name="hint_input_need_beans">콩 개수를 입력해주세요.</string>
    <string name="text_detail_content">자세한 설명</string>
    <string name="hint_detail_content">자세한 설명을 입력해주세요.</string>
    <string name="description_camera_button">카메라 버튼</string>
    <string name="description_post_add">게시글 추가 버튼</string>
    <string name="description_help_me">도와줄게요 아이콘</string>
    <string name="add_button">Add_button</string>
    <string name="text_beans_count">콩 %d개</string>
    <string name="text_empty_help_me">게시물이 없습니다.\n도움 서비스를 요청해 보세요!</string>
    <string name="text_empty_help_you">게시물이 없습니다.\n도움 서비스를 요청해 보세요!</string>
    <string name="description_help_you_icon">도와줄게요 아이콘</string>
    <string name="text_post_list_help_me">도와주세요</string>
    <string name="text_post_list_help_you">도와줄게요</string>
    <string name="text_hint_id">아이디</string>
    <string name="text_hint_pw">비밀번호</string>
    <string name="text_login">로그인</string>
    <string name="text_register">회원가입</string>
    <string name="text_login_info">로그인에 사용할\n정보를 입력해주세요.</string>
    <string name="text_nick_name">닉네임</string>
    <string name="text_hint_nick_name">닉네임을 입력해주세요</string>
    <string name="text_hint_pw_info">비밀번호를 입력해주세요</string>
    <string name="text_pw_conf">비밀번호 확인</string>
    <string name="text_hint_conf_pw">비밀번호를 확인해주세요.</string>
    <string name="blank">TODO</string>
    <string name="text_complete">완료</string>
    <string name="text_univ_name">구름대학교</string>
    <string name="text_univ_student">구름이</string>
    <string name="text_hold_been">보유 콩</string>
    <string name="text_been_count">%d개</string>
    <string name="text_my_written"><![CDATA[내가 쓴 글 >]]></string>
    <string name="text_my_transaction">나의 거래</string>
    <string name="been_accumulate_revenue">누적 콩 수익량</string>
    <string name="text_provide_help">도움 제공 거래 횟수</string>
    <string name="text_number">%d 번</string>
    <string name="text_guide_help">지금까지 %d원 에 달하는 도움을\n 제공했습니다.</string>
    <string name="been_accumulate_separation">누적 콩 지출량</string>
    <string name="text_provide_helped">도움 요청 거래 횟수</string>
    <string name="text_guide_helped">지금까지 %d원 에 달하는 도움을\n 제공했습니다.</string>
    <string name="text_info_blank_post_message">게시물이 없습니다.\n도움 서비스를 제공해 보세요!</string>
    <string name="text_edit_post">게시글 수정</string>
    <string name="text_remove_post">게시글 삭제</string>
    <string name="text_remove_list_btn">리스트 삭제 버튼</string>
    <string name="text_add_list_btn">리스트 추가 버튼</string>
    <string name="text_date">%d/%d</string>
    <string name="text_local_time">%d:%d</string>
    <string name="text_info_des">교양 과제인데..\n하나도 모르겠어요.\n내일까지 해야돼요 도와주세요!</string>
    <string name="text_do_chatting">채팅하기</string>
    <string name="description_back_icon">뒤로가기 아이콘</string>
    <string name="hint_search_gudie">검색어를 입력해주세요</string>
    <string name="text_search_post">게시판의 글을 검색해보세요!</string>
    <string name="description_magifier_icon">돋보기 아이콘</string>
    <string name="info_exchange">콩 한개는 약 2500원의 \n가치에 달합니다</string>
    <string name="description_banner_image">배너 이미지</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>