<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_search_back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="35dp"
            android:layout_marginStart="23dp"
            android:contentDescription="@string/description_back_icon" />

        <EditText
            android:id="@+id/et_input_search"
            style="@style/customTextViewFontStyle.S12.gray_60"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginStart="17dp"
            android:paddingStart="12dp"
            android:layout_marginEnd="23dp"
            android:paddingEnd="12dp"
            android:background="@drawable/shape_rounded_rect_6dp"
            android:backgroundTint="@color/gray_10"
            android:hint="@string/hint_search_gudie"
            app:layout_constraintBottom_toBottomOf="@id/iv_search_back_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_search_back_icon"
            app:layout_constraintTop_toTopOf="@id/iv_search_back_icon"
            android:autofillHints="false"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_search_post"
            style="@style/customTextViewFontStyle.S14.black_50"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/text_search_post"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_input_search"
            app:layout_constraintVertical_bias="0.17" />
        
        
        <ImageView
            app:layout_constraintTop_toBottomOf="@id/tv_search_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_magnifier"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/description_magifier_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>