<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.account.SignInActivity">

        <ImageView
            android:id="@+id/img_log_in_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="186dp"
            android:background="@drawable/img_loginlogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_login_id"
            android:hint="@string/text_hint_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="23dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="20dp"
            android:backgroundTint="#85B5FF"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_log_in_logo" />

        <EditText
            android:id="@+id/et_login_pw"
            android:hint="@string/text_hint_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="23dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="20dp"
            android:backgroundTint="#85B5FF"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_login_id" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_login"
            android:layout_width="314dp"
            android:layout_height="57dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="23dp"
            android:background="@drawable/shape_rounded_rect_10dp"
            android:backgroundTint="@color/blue_main"
            android:text="@string/text_login"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_login_pw" />

        <TextView
            android:id="@+id/tv_bt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="18dp"
            android:background="@android:color/transparent"
            android:text="@string/text_register"
            android:textColor="#85B5FF"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/bt_login"
            app:layout_constraintTop_toBottomOf="@id/bt_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
