<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="26dp"
            android:paddingEnd="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/toolbar_menu"
            app:navigationIcon="@drawable/ic_logo_kkiri" />

        <TextView
            android:id="@+id/tv_home_univ_name"
            style="@style/textStyleBold.20sp.black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            android:text="구름대학교"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_home" />

        <View
            android:id="@+id/view_home_info"
            android:layout_width="0dp"
            android:layout_height="76dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="23dp"
            android:background="@drawable/shape_rounded_rect_5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_home_univ_name" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_home_info"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:dividerColor="@color/gray_20"
            app:layout_constraintBottom_toBottomOf="@id/view_home_info"
            app:layout_constraintEnd_toEndOf="@id/view_home_info"
            app:layout_constraintHorizontal_bias="0.548"
            app:layout_constraintStart_toStartOf="@id/view_home_info"
            app:layout_constraintTop_toTopOf="@id/view_home_info" />

        <TextView
            android:id="@+id/tv_home_user_name"
            style="@style/textStyleDefault.16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="19dp"
            android:text="%s님, 반가워요!"
            app:layout_constraintBottom_toBottomOf="@id/view_home_info"
            app:layout_constraintEnd_toStartOf="@id/divider_home_info"
            app:layout_constraintTop_toTopOf="@id/view_home_info"
            tools:text="구름이님, 반가워요!" />

        <TextView
            android:id="@+id/tv_home_my_beans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/text_my_beans"
            app:layout_constraintEnd_toEndOf="@id/view_home_info"
            app:layout_constraintHorizontal_bias="0.43"
            app:layout_constraintStart_toEndOf="@id/divider_home_info"
            app:layout_constraintTop_toTopOf="@id/view_home_info" />

        <ImageView
            android:id="@+id/iv_home_image_beans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_beans_image"
            android:src="@mipmap/image_beans"
            app:layout_constraintEnd_toStartOf="@id/tv_home_my_beans_number"
            app:layout_constraintStart_toStartOf="@id/tv_home_my_beans"
            app:layout_constraintTop_toBottomOf="@id/tv_home_my_beans" />

        <TextView
            android:id="@+id/tv_home_my_beans_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/text_my_beans_number"
            app:layout_constraintEnd_toEndOf="@id/tv_home_my_beans"
            app:layout_constraintStart_toEndOf="@id/iv_home_image_beans"
            app:layout_constraintTop_toBottomOf="@id/tv_home_my_beans"
            tools:text="10개" />

        <TextView
            android:id="@+id/tv_home_help_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:text="@string/text_help_me"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_home_info" />

        <TextView
            android:id="@+id/tv_home_more_help_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:background="@drawable/shape_rounded_rect_10dp"
            android:paddingStart="6dp"
            android:paddingTop="1dp"
            android:paddingEnd="15dp"
            android:paddingBottom="4dp"
            android:text="@string/text_more_eng"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_home_help_me" />

        <ImageButton
            android:id="@+id/ib_home_more_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:background="@null"
            android:contentDescription="@string/description_more"
            android:src="@drawable/ic_arrow_next"
            app:layout_constraintBottom_toBottomOf="@id/tv_home_more_help_me"
            app:layout_constraintEnd_toEndOf="@id/tv_home_more_help_me"
            app:layout_constraintTop_toTopOf="@id/tv_home_more_help_me" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_help_me_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="26dp"
            tools:listitem="@layout/item_help_post"
            app:layout_constraintTop_toBottomOf="@id/tv_home_help_me" />

        <TextView
            android:id="@+id/tv_home_help_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="47dp"
            android:text="@string/text_help_me"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_help_me_list" />

        <TextView
            android:id="@+id/tv_home_more_help_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:background="@drawable/shape_rounded_rect_10dp"
            android:paddingStart="6dp"
            android:paddingTop="1dp"
            android:paddingEnd="15dp"
            android:paddingBottom="4dp"
            android:text="@string/text_more_eng"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_home_help_you" />

        <ImageButton
            android:id="@+id/ib_home_more_help_you_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:background="@null"
            android:contentDescription="@string/description_more"
            android:src="@drawable/ic_arrow_next"
            app:layout_constraintBottom_toBottomOf="@id/tv_home_more_help_you"
            app:layout_constraintEnd_toEndOf="@id/tv_home_more_help_you"
            app:layout_constraintTop_toTopOf="@id/tv_home_more_help_you" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_help_you_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="26dp"
            tools:listitem="@layout/item_help_post"
            app:layout_constraintTop_toBottomOf="@id/tv_home_help_you" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>